[skip ci]: fix(slider): Wrap the lower name under thumbnail

--- a/app/assets/stylesheets/elements.scss
+++ b/app/assets/stylesheets/elements.scss
@@ -457,6 +457,7 @@ section.twilight {
                         text-transform: uppercase;
                         display: block;
                         margin-top: 10px;
+                        white-space: normal;
                     }
 
                     // Hover state
